--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev --respawn --exit-child --transpile-only --ignore-watch node_modules src/index.ts"
+    "dev": "docker compose up & ts-node-dev --respawn --exit-child --transpile-only --ignore-watch node_modules src/index.ts"
   },
   "dependencies": {
     "@types/express": "^4.17.17",
