--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "faker-br": "^0.4.1",
     "jest": "^29.6.4",
     "morgan": "^1.10.0",
     "nodemon": "^3.0.1",
