--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "docker compose up & ts-node-dev --respawn --exit-child --transpile-only --ignore-watch node_modules src/index.ts"
+    "dev": "docker compose up -d & ts-node-dev --respawn --exit-child --transpile-only --ignore-watch node_modules src/driver/api.ts"
   },
   "dependencies": {
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.4",
+    "@types/sinon": "^17.0.3",
     "axios": "^1.5.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -19,6 +20,7 @@
     "morgan": "^1.10.0",
     "nodemon": "^3.0.1",
     "pg-promise": "^11.5.4",
+    "sinon": "^17.0.1",
     "supertest": "^6.3.4",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
